# SJTU_Message_Bot

./: .gitignore  AI_Client.py  FeishuClient.py  PROMPT.txt  README.md  cache.txt  main.py  pyproject.toml  sjtuMessageClient.py  test.py  test2.py
