[project]
name = "sjtu-message-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chardet>=5.2.0",
    "dotenv>=0.9.9",
    "lxml>=6.0.2",
    "openai>=2.21.0",
    "pandas>=3.0.1",
    "requests>=2.32.5",
]
